crates/fig-lexer/tests/snapshots/integration_tests__namespaces__with_annotations.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Hash
- Ident: deprecated
- Newline
- Namespace
- Ident: legacy
- Newline
- Indent
- Func
- Ident: old_api
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Dedent
- Hash
- Ident: experimental
- Newline
- Namespace
- Ident: nightly
- Newline
- Indent
- Func
- Ident: new_feature
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Dedent
